--- a/CloudinaryTest/CloudinaryTest/CloudinaryTest.csproj
+++ b/CloudinaryTest/CloudinaryTest/CloudinaryTest.csproj
@@ -10,6 +10,7 @@
     <PackageReference Include="Abp" Version="8.3.1" />
     <PackageReference Include="AutoMapper" Version="12.0.1" />
     <PackageReference Include="AutoMapper.Extensions.Microsoft.DependencyInjection" Version="12.0.1" />
+    <PackageReference Include="CloudinaryDotNet" Version="1.22.0" />
     <PackageReference Include="Microsoft.AspNetCore.OpenApi" Version="7.0.8" />
     <PackageReference Include="Microsoft.EntityFrameworkCore.Design" Version="7.0.10">
       <PrivateAssets>all</PrivateAssets>
